Added dictatedIn property and some styles to Course Component

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,38 @@
-@import "~bootstrap/scss/bootstrap";
+// Required
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+
+
+
+
+
+
+.courseBars {
+  fill: #6D6E71;
+}
+
+.course {
+  .multiply {
+    mix-blend-mode: hard-light;
+
+  }
+}
+
+.isolate {
+  isolation: isolate;
+  mix-blend-mode: unset;
+}
+
+
+
+
+
+
+
+// Optional
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/images";
+@import "../node_modules/bootstrap/scss/code";
+@import "../node_modules/bootstrap/scss/grid";
