Added CategoryInfo & CategoriesContainer

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,11 @@
   fill: #6D6E71;
 }
 
+.categoryInfo {
+  display: flex;
+  vertical-align: middle;
+}
+
 .course {
   .multiply {
     mix-blend-mode: hard-light;
